Cambios en la página de admin

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -74,11 +74,11 @@
     <div class="page-title dark-background" data-aos="fade"
       style="background-image: url(/assets/img/travel/showcase-8.webp);">
       <div class="container position-relative">
-        <h1>Admin Dashboard</h1>
-        <p>Manage your platform's users, tours, destinations, and more.</p>
+        <h1>Página Administrador</h1>
+        <p>Maneja todo tu negocio</p>
         <nav class="breadcrumbs">
           <ol>
-            <li><a href="../index.html">Home</a></li>
+            <li><a href="../index.html">Inicio</a></li>
             <li class="current">Admin</li>
           </ol>
         </nav>
@@ -94,23 +94,23 @@
         <div id="dashboard-view">
           <!-- User Management -->
           <div class="admin-section mb-5">
-            <h2><i class="bi bi-people-fill me-2"></i>User Management</h2>
+            <h2><i class="bi bi-people-fill me-2"></i>Usuarios</h2>
             <div class="row gy-4">
               <div class="col-lg-4 col-md-6">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title"><i class="bi bi-plus-circle me-2"></i>Create User</h5>
-                    <p class="card-text">Add a new user to the system.</p>
-                    <a href="#" class="btn btn-primary" data-view="user-create-view">Create</a>
+                    <h5 class="card-title"><i class="bi bi-plus-circle me-2"></i>Crear Usuario</h5>
+                    <p class="card-text">Agregar un nuevo usuario al sistema.</p>
+                    <a href="#" class="btn btn-primary" data-view="user-create-view">Crear</a>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title"><i class="bi bi-pencil-square me-2"></i>Manage Users</h5>
-                    <p class="card-text">View, edit, and search for existing users.</p>
-                    <a href="#" class="btn btn-primary" data-view="user-manage-view">Manage</a>
+                    <h5 class="card-title"><i class="bi bi-pencil-square me-2"></i>Administrar Usuarios</h5>
+                    <p class="card-text">Ver, editar y buscar usuarios existentes.</p>
+                    <a href="#" class="btn btn-primary" data-view="user-manage-view">Administrar</a>
                   </div>
                 </div>
               </div>
@@ -119,23 +119,23 @@
 
           <!-- Reservations Management -->
           <div class="admin-section mb-5">
-            <h2><i class="bi bi-calendar-check-fill me-2"></i>Reservations Management</h2>
+            <h2><i class="bi bi-calendar-check-fill me-2"></i>Reservas</h2>
             <div class="row gy-4">
               <div class="col-lg-4 col-md-6">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title"><i class="bi bi-plus-circle me-2"></i>Create Reservation</h5>
-                    <p class="card-text">Manually book a tour for a user.</p>
-                    <a href="#" class="btn btn-primary" data-view="reservation-create-view">Create</a>
+                    <h5 class="card-title"><i class="bi bi-plus-circle me-2"></i>Crear Reserva</h5>
+                    <p class="card-text">Reservar un tour manualmente para un usuario.</p>
+                    <a href="#" class="btn btn-primary" data-view="reservation-create-view">Crear</a>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title"><i class="bi bi-pencil-square me-2"></i>Manage Reservations</h5>
-                    <p class="card-text">View, update, or cancel reservations.</p>
-                    <a href="#" class="btn btn-primary" data-view="reservation-manage-view">Manage</a>
+                    <h5 class="card-title"><i class="bi bi-pencil-square me-2"></i> Administrar Reservas</h5>
+                    <p class="card-text">Ver, actualizar o cancelar reservas.</p>
+                    <a href="#" class="btn btn-primary" data-view="reservation-manage-view">Administrar</a>
                   </div>
                 </div>
               </div>
@@ -144,23 +144,23 @@
 
           <!-- Tours Management -->
           <div class="admin-section mb-5">
-            <h2><i class="bi bi-map-fill me-2"></i>Tours Management</h2>
+            <h2><i class="bi bi-map-fill me-2"></i>Tours</h2>
             <div class="row gy-4">
               <div class="col-lg-4 col-md-6">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title"><i class="bi bi-plus-circle me-2"></i>Create Tour</h5>
-                    <p class="card-text">Add a new tour package.</p>
-                    <a href="#" class="btn btn-primary" data-view="tour-create-view">Create</a>
+                    <h5 class="card-title"><i class="bi bi-plus-circle me-2"></i>Crear Tour</h5>
+                    <p class="card-text">Agregar un nuevo paquete de tour.</p>
+                    <a href="#" class="btn btn-primary" data-view="tour-create-view">Crear</a>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title"><i class="bi bi-pencil-square me-2"></i>Manage Tours</h5>
-                    <p class="card-text">View, edit, and update existing tours.</p>
-                    <a href="#" class="btn btn-primary" data-view="tour-manage-view">Manage</a>
+                    <h5 class="card-title"><i class="bi bi-pencil-square me-2"></i>Administrar Tours</h5>
+                    <p class="card-text">Ver, editar y actualizar tours existentes.</p>
+                    <a href="#" class="btn btn-primary" data-view="tour-manage-view">Administrar</a>
                   </div>
                 </div>
               </div>
@@ -169,23 +169,23 @@
 
           <!-- Destinations Management -->
           <div class="admin-section mb-5">
-            <h2><i class="bi bi-geo-alt-fill me-2"></i>Destinations Management</h2>
+            <h2><i class="bi bi-geo-alt-fill me-2"></i>Destinos</h2>
             <div class="row gy-4">
               <div class="col-lg-4 col-md-6">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title"><i class="bi bi-plus-circle me-2"></i>Create Destination</h5>
-                    <p class="card-text">Add a new travel destination.</p>
-                    <a href="#" class="btn btn-primary" data-view="destination-create-view">Create</a>
+                    <h5 class="card-title"><i class="bi bi-plus-circle me-2"></i>Crear Destino</h5>
+                    <p class="card-text">Agregar un nuevo destino.</p>
+                    <a href="#" class="btn btn-primary" data-view="destination-create-view">Crear</a>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title"><i class="bi bi-pencil-square me-2"></i>Manage Destinations</h5>
-                    <p class="card-text">View and edit destination details.</p>
-                    <a href="#" class="btn btn-primary" data-view="destination-manage-view">Manage</a>
+                    <h5 class="card-title"><i class="bi bi-pencil-square me-2"></i>Administrar Destinos</h5>
+                    <p class="card-text">Ver, editar y actualizar destinos existentes.</p>
+                    <a href="#" class="btn btn-primary" data-view="destination-manage-view">Administrar</a>
                   </div>
                 </div>
               </div>
@@ -194,23 +194,23 @@
 
           <!-- Payments Management -->
           <div class="admin-section">
-            <h2><i class="bi bi-credit-card-fill me-2"></i>Payments Management</h2>
+            <h2><i class="bi bi-credit-card-fill me-2"></i>Pagos</h2>
             <div class="row gy-4">
               <div class="col-lg-4 col-md-6">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title"><i class="bi bi-eye-fill me-2"></i>View Payments</h5>
-                    <p class="card-text">See the history of all transactions.</p>
-                    <a href="#" class="btn btn-primary" data-view="payment-view-view">View</a>
+                    <h5 class="card-title"><i class="bi bi-eye-fill me-2"></i>Ver Pagos</h5>
+                    <p class="card-text">Ver el historial de todas las transacciones.</p>
+                    <button class="btn btn-secondary" disabled>Próximamente</button>
                   </div>
                 </div>
               </div>
               <div class="col-lg-4 col-md-6">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title"><i class="bi bi-receipt me-2"></i>Issue Refund</h5>
-                    <p class="card-text">Process refunds for customers.</p>
-                    <a href="#" class="btn btn-warning" data-view="payment-refund-view">Refund</a>
+                    <h5 class="card-title"><i class="bi bi-receipt me-2"></i>Reembolsar</h5>
+                    <p class="card-text">Procesar reembolsos para clientes.</p>
+                    <button class="btn btn-secondary" disabled>Próximamente</button>
                   </div>
                 </div>
               </div>
@@ -224,18 +224,46 @@
             <i class="bi bi-arrow-left"></i> Back to Dashboard
           </button>
 
+          <!-- Create User View -->
+          <div id="user-create-view" class="management-view" style="display: none;">
+            <h3>Crear Nuevo Usuario</h3>
+            <form>
+              <div class="mb-3">
+                <label for="userName" class="form-label">Nombre</label>
+                <input type="text" class="form-control" id="userName" required>
+              </div>
+              <div class="mb-3">
+                <label for="userSurname" class="form-label">Apellido</label>
+                <input type="text" class="form-control" id="userSurname" required>
+              </div>
+              <div class="mb-3">
+                <label for="userEmail" class="form-label">Correo</label>
+                <input type="email" class="form-control" id="userEmail" required>
+              </div>
+              <div class="mb-3">
+                <label for="userPassword" class="form-label">Contraseña</label>
+                <input type="password" class="form-control" id="userPassword" required>
+              </div>
+              <div class="mb-3">
+                <label for="userAdminKey" class="form-label">Clave Admin (Opcional)</label>
+                <input type="password" class="form-control" id="userAdminKey">
+              </div>
+              <button type="submit" class="btn btn-primary">Crear Usuario</button>
+            </form>
+          </div>
+
           <!-- Manage Users View -->
           <div id="user-manage-view" class="management-view" style="display: none;">
-            <h3>Manage Users</h3>
-            <p>Here you can see and manage all registered users.</p>
+            <h3>Administrar Usuarios</h3>
+            <p>Aquí puedes ver y gestionar todos los usuarios registrados.</p>
             <!-- Placeholder for user table -->
             <table class="table table-striped">
               <thead>
                 <tr>
                   <th>ID</th>
-                  <th>Name</th>
-                  <th>Email</th>
-                  <th>Actions</th>
+                  <th>Nombre</th>
+                  <th>Correo</th>
+                  <th>Acciones</th>
                 </tr>
               </thead>
               <tbody>
@@ -255,33 +283,51 @@
 
           <!-- Create Tour View -->
           <div id="tour-create-view" class="management-view" style="display: none;">
-            <h3>Create New Tour</h3>
-            <p>Fill out the form below to add a new tour.</p>
+            <h3>Crear Nuevo Tour</h3>
+            <p>Llena el formulario a continuación para agregar un nuevo tour.</p>
             <form>
               <div class="mb-3">
-                <label for="tourName" class="form-label">Tour Name</label>
+                <label for="tourName" class="form-label">Nombre del Tour</label>
                 <input type="text" class="form-control" id="tourName" required>
               </div>
               <div class="mb-3">
-                <label for="tourDestination" class="form-label">Destination</label>
+                <label for="tourDestination" class="form-label">Destino</label>
                 <input type="text" class="form-control" id="tourDestination" required>
               </div>
               <div class="mb-3">
-                <label for="tourDescription" class="form-label">Description</label>
+                <label for="tourDescription" class="form-label">Descripción</label>
                 <textarea class="form-control" id="tourDescription" rows="3"></textarea>
               </div>
               <div class="mb-3">
-                <label for="tourPrice" class="form-label">Price</label>
+                <label for="tourPrice" class="form-label">Precio</label>
                 <input type="number" class="form-control" id="tourPrice" required>
               </div>
-              <button type="submit" class="btn btn-primary">Create Tour</button>
+              <button type="submit" class="btn btn-primary">Crear Tour</button>
             </form>
+          </div>
+
+          <!-- Manage Destinations View -->
+          <div id="destination-manage-view" class="management-view" style="display: none;">
+            <h3>Administrar Destinos</h3>
+            <p>Lista de destinos disponibles (basado en tours existentes).</p>
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>#</th>
+                  <th>Ciudad</th>
+                  <th>Estado</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- Destination rows will be populated by JavaScript -->
+              </tbody>
+            </table>
           </div>
 
           <!-- Add other management views here as needed -->
           <div id="default-management-view" class="management-view" style="display: none;">
-            <h3>Management Section</h3>
-            <p>This is a placeholder for the selected management action. Content will be loaded here.</p>
+            <h3>Sección de Administración</h3>
+            <p>Este es un relleno para la sección de administración seleccionada. El contenido se cargará aquí.</p>
           </div>
 
         </div>
@@ -354,47 +400,7 @@
   <!-- Main JS File -->
   <script src="../js/main.js"></script>
 
-  <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const dashboardView = document.getElementById('dashboard-view');
-      const managementViewsContainer = document.getElementById('management-views-container');
-      const allManagementViews = document.querySelectorAll('.management-view');
-      const actionButtons = document.querySelectorAll('[data-view]');
-      const backButton = document.querySelector('.btn-back-to-dashboard');
 
-      // --- View Switching Logic ---
-
-      function showView(viewId) {
-        // Hide dashboard and all management views
-        dashboardView.style.display = 'none';
-        allManagementViews.forEach(view => view.style.display = 'none');
-
-        // Show the main container for management views and the specific view
-        managementViewsContainer.style.display = 'block';
-        const targetView = document.getElementById(viewId);
-        if (targetView) {
-          targetView.style.display = 'block';
-        } else {
-          // Fallback to a default view if the target doesn't exist
-          document.getElementById('default-management-view').style.display = 'block';
-        }
-      }
-
-      actionButtons.forEach(button => {
-        button.addEventListener('click', function (e) {
-          e.preventDefault();
-          const viewId = this.getAttribute('data-view');
-          showView(viewId);
-        });
-      });
-
-      backButton.addEventListener('click', function (e) {
-        e.preventDefault();
-        managementViewsContainer.style.display = 'none';
-        dashboardView.style.display = 'block';
-      });
-    });
-  </script>
   <script type="module" src="../src/controllers/AdminController.js"></script>
 
 </body>
