Cambios para los fetch admin

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -324,6 +324,17 @@
             </table>
           </div>
 
+          <!-- Create Reservation View -->
+          <div id="reservation-create-view" class="management-view" style="display: none;">
+            <h3>Crear Nueva Reserva</h3>
+            <p>Funcionalidad de creación manual en desarrollo. Por favor use el sitio público o la API para crear
+              reservas.</p>
+            <div class="alert alert-info">
+              <i class="bi bi-info-circle"></i> Para crear una reserva de prueba, puede usar el script
+              <code>create_reservation.js</code> incluido en el proyecto.
+            </div>
+          </div>
+
           <!-- Manage Reservations View -->
           <div id="reservation-manage-view" class="management-view" style="display: none;">
             <h3>Administrar Reservas</h3>
@@ -333,7 +344,7 @@
                 <tr>
                   <th>ID</th>
                   <th>Contacto</th>
-                  <th>Fecha Viaje</th>
+                  <th>Fecha Creación</th>
                   <th>Estado</th>
                   <th>Total</th>
                   <th>Acciones</th>
