Cambios para los fetch tours verlos

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -339,6 +339,30 @@
             </form>
           </div>
 
+          <!-- Manage Tours View -->
+          <div id="tour-manage-view" class="management-view" style="display: none;">
+            <h3>Administrar Tours</h3>
+            <p>Ver, editar y actualizar tours existentes.</p>
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>ID</th>
+                  <th>Nombre</th>
+                  <th>Ciudad</th>
+                  <th>País</th>
+                  <th>Actividad</th>
+                  <th>Cupo</th>
+                  <th>Días</th>
+                  <th>Precio</th>
+                  <th>Acciones</th>
+                </tr>
+              </thead>
+              <tbody>
+                <!-- Tour rows will be populated by JavaScript -->
+              </tbody>
+            </table>
+          </div>
+
           <!-- Manage Destinations View -->
           <div id="destination-manage-view" class="management-view" style="display: none;">
             <h3>Administrar Destinos</h3>
@@ -404,7 +428,7 @@
                 </tr>
               </thead>
               <tbody>
-                <!-- Payment rows will be populated by JavaScript -->
+                <!-- Tour rows will be populated by JavaScript -->
               </tbody>
             </table>
           </div>
