Cambios para registro las validaciones, y las facturas al realizar el pago

--- a/pages/car.html
+++ b/pages/car.html
@@ -102,13 +102,13 @@
           </div>
           <div class="col-lg-4">
             <div class="payment-summary">
-              <h4>Payment Summary</h4>
+              <h4>Resumen de Pago</h4>
               <div class="summary-item d-flex justify-content-between">
                 <span>Subtotal</span>
                 <span id="cart-subtotal">$0.00</span>
               </div>
               <div class="summary-item d-flex justify-content-between">
-                <span>Taxes</span>
+                <span>Impuestos</span>
                 <span id="cart-taxes">$0.00</span>
               </div>
               <hr>
@@ -124,7 +124,7 @@
                 <label for="nro-cuenta" class="form-label">Nro. Cuenta</label>
                 <input type="text" class="form-control" id="nro-cuenta">
               </div>
-              <button class="btn btn-primary w-100">Proceed to Payment</button>
+              <button id="btn-checkout" class="btn btn-primary w-100">Proceder al Pago</button>
             </div>
           </div>
         </div>
