--- a/index.html
+++ b/index.html
@@ -97,46 +97,12 @@
             <div class="booking-form-wrapper" data-aos="fade-left" data-aos-delay="200">
               <div class="booking-form">
                 <h3 class="form-title">Planea Tu Viaje</h3>
-                <form action="" class="">
+                <form action="pages/tours.html" method="get">
                   <div class="form-group mb-3">
                     <label for="destination">Destinos</label>
-                    <select name="destination" id="destination" class="form-select" required="">
+                    <select name="destination" id="destination" class="form-select">
                       <option value="">Elige tu destino</option>
                     </select>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="form-group mb-3">
-                        <label for="checkin">Fecha de Salida</label>
-                        <input type="date" name="checkin" id="checkin" class="form-control" required="">
-                      </div>
-                    </div>
-                  </div>
-
-                  <div class="row">
-                    <div class="col-md-6">
-                      <div class="form-group mb-3">
-                        <label for="adults">Adultos</label>
-                        <select name="adults" id="adults" class="form-select" required="">
-                          <option value="1">1 Adulto</option>
-                          <option value="2">2 Adultos</option>
-                          <option value="3">3 Adultos</option>
-                          <option value="4">4+ Adultos</option>
-                        </select>
-                      </div>
-                    </div>
-                    <div class="col-md-6">
-                      <div class="form-group mb-3">
-                        <label for="children">Niños</label>
-                        <select name="children" id="children" class="form-select">
-                          <option value="0">No Niños</option>
-                          <option value="1">1 Niño</option>
-                          <option value="2">2 Niños</option>
-                          <option value="3">3+ Niños</option>
-                        </select>
-                      </div>
-                    </div>
                   </div>
 
                   <button type="submit" class="btn btn-primary w-100">Buscar Tours</button>
