Cambios en la API par Tours y la pagina de user

--- a/pages/tours.html
+++ b/pages/tours.html
@@ -135,9 +135,11 @@
                   </div>
                   <div class="col-lg-3 col-md-6 mb-3">
                     <select class="form-select" id="filter-price" aria-label="Price Range">
-                      <option value="">Rango Precio</option>
-                      <option value="0-500">$20 - $50</option>
-                      <option value="0-500">$60 - $100</option>
+                      <option value="">Precio Máximo</option>
+                      <option value="50">Hasta $50</option>
+                      <option value="100">Hasta $100</option>
+                      <option value="200">Hasta $200</option>
+                      <option value="500">Hasta $500</option>
                     </select>
                   </div>
                 </div>
