--- a/pages/user.html
+++ b/pages/user.html
@@ -75,12 +75,11 @@
     <div class="page-title dark-background" data-aos="fade"
       style="background-image: url(/assets/img/travel/showcase-8.webp);">
       <div class="container position-relative">
-        <h1>User Profile</h1>
-        <p>Manage your profile, reservations, and payment history.</p>
+        <h1>Perfil de Usuario</h1>
         <nav class="breadcrumbs">
           <ol>
             <li><a href="../index.html">Home</a></li>
-            <li class="current">User Profile</li>
+            <li class="current">Perfil de Usuario</li>
           </ol>
         </nav>
       </div>
@@ -95,11 +94,11 @@
           <div class="col-lg-3">
             <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
               <a class="nav-link active" id="v-pills-profile-tab" data-bs-toggle="pill" href="#v-pills-profile"
-                role="tab" aria-controls="v-pills-profile" aria-selected="true">Profile Settings</a>
+                role="tab" aria-controls="v-pills-profile" aria-selected="true">Configuración de Perfil</a>
               <a class="nav-link" id="v-pills-reservations-tab" data-bs-toggle="pill" href="#v-pills-reservations"
-                role="tab" aria-controls="v-pills-reservations" aria-selected="false">My Reservations</a>
+                role="tab" aria-controls="v-pills-reservations" aria-selected="false">Mis Reservas</a>
               <a class="nav-link" id="v-pills-payments-tab" data-bs-toggle="pill" href="#v-pills-payments" role="tab"
-                aria-controls="v-pills-payments" aria-selected="false">Payment History</a>
+                aria-controls="v-pills-payments" aria-selected="false">Historial de Pagos</a>
             </div>
           </div>
 
@@ -108,8 +107,8 @@
               <!-- Profile Settings Tab -->
               <div class="tab-pane fade show active" id="v-pills-profile" role="tabpanel"
                 aria-labelledby="v-pills-profile-tab">
-                <h3>Profile Settings <small class="text-muted fs-6">(ID: <span id="user-id-display"></span>)</small>
-                </h3>
+                <h3>Configuración de Perfil <small class="text-muted fs-6">(ID: <span
+                      id="user-id-display"></span>)</small></h3>
                 <form id="profile-form">
                   <div class="row mb-3">
                     <div class="col-md-6">
@@ -122,73 +121,46 @@
                     </div>
                   </div>
                   <div class="mb-3">
-                    <label for="profile-email" class="form-label">Email address</label>
+                    <label for="profile-email" class="form-label">Correo electrónico</label>
                     <input type="email" class="form-control" id="profile-email" readonly disabled>
                   </div>
 
                   <hr class="my-4">
 
-                  <h4>Change Password</h4>
+                  <h4>Cambiar Contraseña</h4>
                   <div class="mb-3">
-                    <label for="profile-password" class="form-label">New Password (leave blank to keep current)</label>
+                    <label for="profile-password" class="form-label">Nueva Contraseña (deja en blanco para mantener la
+                      actual)</label>
                     <input type="password" class="form-control" id="profile-password">
                   </div>
 
-                  <button type="submit" class="btn btn-primary">Update Profile</button>
+                  <button type="submit" class="btn btn-primary">Actualizar Perfil</button>
                 </form>
               </div>
 
               <!-- My Reservations Tab -->
               <div class="tab-pane fade" id="v-pills-reservations" role="tabpanel"
                 aria-labelledby="v-pills-reservations-tab">
-                <h3>My Reservations</h3>
+                <h3>Mis Reservas</h3>
                 <div class="list-group">
-                  <div class="list-group-item">
-                    <div class="d-flex w-100 justify-content-between">
-                      <h5 class="mb-1">Paris Romance Tour</h5>
-                      <small>3 days ago</small>
-                    </div>
-                    <p class="mb-1"><strong>Date:</strong> 2025-12-15 - 2025-12-20</p>
-                    <p class="mb-1"><strong>Status:</strong> Confirmed</p>
-                    <small>Reservation ID: #12345</small>
-                  </div>
-                  <div class="list-group-item">
-                    <div class="d-flex w-100 justify-content-between">
-                      <h5 class="mb-1">Bali Adventure</h5>
-                      <small>1 week ago</small>
-                    </div>
-                    <p class="mb-1"><strong>Date:</strong> 2026-01-20 - 2026-01-27</p>
-                    <p class="mb-1"><strong>Status:</strong> Pending</p>
-                    <small>Reservation ID: #12346</small>
-                  </div>
+                  <!-- Reservations will be loaded dynamically by UserController.js -->
                 </div>
               </div>
 
               <!-- Payment History Tab -->
               <div class="tab-pane fade" id="v-pills-payments" role="tabpanel" aria-labelledby="v-pills-payments-tab">
-                <h3>Payment History</h3>
+                <h3>Historial de Pagos</h3>
                 <table class="table">
                   <thead>
                     <tr>
-                      <th scope="col">Date</th>
-                      <th scope="col">Description</th>
-                      <th scope="col">Amount</th>
-                      <th scope="col">Status</th>
+                      <th scope="col">Fecha</th>
+                      <th scope="col">Descripción</th>
+                      <th scope="col">Monto</th>
+                      <th scope="col">Estado</th>
                     </tr>
                   </thead>
                   <tbody>
-                    <tr>
-                      <td>2025-11-10</td>
-                      <td>Paris Romance Tour</td>
-                      <td>$1,299.00</td>
-                      <td><span class="badge bg-success">Paid</span></td>
-                    </tr>
-                    <tr>
-                      <td>2025-11-06</td>
-                      <td>Bali Adventure (Deposit)</td>
-                      <td>$200.00</td>
-                      <td><span class="badge bg-success">Paid</span></td>
-                    </tr>
+                    <!-- Invoices will be loaded dynamically by UserController.js -->
                   </tbody>
                 </table>
               </div>
