Cambios en el hold y su API

--- a/pages/car.html
+++ b/pages/car.html
@@ -96,8 +96,8 @@
                 </div>
               </div>
 
-              <a href="tours.html" class="btn btn-outline-primary mt-3"><i class="bi bi-plus-circle"></i> Add New
-                Items</a>
+              <a href="tours.html" class="btn btn-outline-primary mt-3"><i class="bi bi-plus-circle"></i> Agregar
+                Tour</a>
             </div>
           </div>
           <div class="col-lg-4">
