--- a/pages/register.html
+++ b/pages/register.html
@@ -141,6 +141,24 @@
   <script type="module">
     import { renderLayout } from '../src/components/Layout.js';
     renderLayout();
+
+    // Real-time validation for Name and Surname
+    document.addEventListener('DOMContentLoaded', () => {
+      const nameInput = document.getElementById('name');
+      const surnameInput = document.getElementById('surname');
+
+      const validateInput = (e) => {
+        // Replace any character that is not a letter or space
+        e.target.value = e.target.value.replace(/[^a-zA-Z\sáéíóúÁÉÍÓÚñÑ]/g, '');
+      };
+
+      if (nameInput) {
+        nameInput.addEventListener('input', validateInput);
+      }
+      if (surnameInput) {
+        surnameInput.addEventListener('input', validateInput);
+      }
+    });
   </script>
   <script type="module" src="../src/controllers/AuthController.js"></script>
 
