Cambios admin y registro a los que estan logeados

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -210,6 +210,12 @@
               </li>
             </ul>
 
+            <!-- Search Bar -->
+            <div class="mb-3">
+              <input type="text" id="user-search" class="form-control"
+                placeholder="Buscar usuario por nombre, apellido o email...">
+            </div>
+
             <!-- Placeholder for user table -->
             <table class="table table-striped">
               <thead>
